<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Campo de búsqueda por título o URL -->
    <EditText
        android:id="@+id/searchPhotoEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_por_titulo_o_url"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="10dp" />

    <!-- Botón de búsqueda -->
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        app:layout_constraintTop_toBottomOf="@+id/searchPhotoEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Botón para refrescar fotos -->
    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refrescar"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Campo para ingresar el título de la nueva foto -->
    <EditText
        android:id="@+id/photoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_de_la_foto"
        app:layout_constraintTop_toBottomOf="@+id/refreshButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="10dp" />

    <!-- Campo para ingresar la URL de la nueva foto -->
    <EditText
        android:id="@+id/photoUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/url_de_la_foto"
        app:layout_constraintTop_toBottomOf="@+id/photoTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:padding="10dp" />

    <!-- Botón para subir una nueva foto -->
    <Button
        android:id="@+id/postPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subir_foto"
        app:layout_constraintTop_toBottomOf="@+id/photoUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- RecyclerView para mostrar las fotos -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/postPhotoButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
